Update AuthorPhotoInitializer.java