@@ -39,7 +39,13 @@ public class AuthorPhotoInitializer {
 
                 Author author = authorService.findByNameAndSurname(name, surname);
                 if (author != null) {
-                    byte[] photoBytes = Files.readAllBytes(Paths.get("src/main/resources/static/images/" + fileName));
+                    byte[] photoBytes = Files.readAllBytes(InputStream is = getClass().getClassLoader().getResourceAsStream("static/images/" + fileName);
+if (is != null) {
+    byte[] photoBytes = is.readAllBytes();
+    author.setPhoto(photoBytes);
+    authorService.save(author);
+}
+);
                     author.setPhoto(photoBytes);
                     authorService.save(author);
                     System.out.println("Foto caricata per: " + fullName);
